--- a/src/modules/constants/styles/styles.css
+++ b/src/modules/constants/styles/styles.css
@@ -1,7 +1,15 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 :root {
   /* Colors primary theme */
   --primary-bg-color: #ecf0f3;
   --primary-fs-color: #555;
+
+  /* Colors secondary theme */
+  --secondary-bg-color: #1b1f27;
+  --secondary-fs-color: #ecf0f3;
+
+  /* font-size */
+  --fs-big: ;
 }
 
 html,
@@ -127,4 +135,8 @@ q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+
+button {
+  all: unset;
 }
