--- a/src/modules/constants/styles/styles.css
+++ b/src/modules/constants/styles/styles.css
@@ -10,6 +10,7 @@
 
   /* font-size */
   --fs-button: clamp(1.5rem, 8.5rem, calc(40 / (1024 / 100) * 1vw));
+  --fs-small: clamp(1rem, 2vw, 4.5rem);
   --fs-paragraph: clamp(2rem, 3vw, 8.5rem);
   --fs-subtitle: clamp(2.2rem, 3vw, 8.5rem);
   --fs-heading: clamp(3.5rem, 8vw + 1rem, 10.5rem);
